--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -400,6 +400,13 @@ body {
   padding: 5px 20px !important;
 }
 
+.btnGrey {
+  background: #E3E3E3 !important;
+  color: 69478e !important;
+  padding: 5px 20px !important;
+  border-radius: 20px !important;
+}
+
 .btnGreyLight {
   background: #6C757D !important;
   color: white !important;
