--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -418,3 +418,11 @@ body {
   display: flex;
   justify-content: center;
 }
+
+.purple-footer {
+  margin-top: 24px;
+  height: 60px;
+  width: 100%;
+  background-color: #69478e;
+  border-radius: 12px;
+}
